@@ -26,7 +26,7 @@ TODO
 ** error logger is a content provider for all activities
 
 * parameters activity allows for clicking on item and displaying all info in poppup window
-* always adding in colon (:) after label text (or user defined)
+* ability to change label separator (give list to choose from)
 * improve relay mask image
 * add in ability to query device version
 * add in ability to turn on feeding mode
