@@ -41,24 +41,24 @@ Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
     <string name="last_updated">Last Updated:</string>
     <string name="refresh_label">Refresh</string>
 	<string name="status_label">Status</string>
-	<string name="temp1_label">T1:</string>
-	<string name="temp2_label">T2:</string>
-	<string name="temp3_label">T3:</string>
-	<string name="ph_label">PH:</string>
-	<string name="dp_label">DP:</string>
-	<string name="ap_label">AP:</string>
-	<string name="salinity_label">Salinity:</string>
-	<string name="ato_low_label">ATO Low:</string>
-	<string name="ato_high_label">ATO High:</string>
+	<string name="temp1_label">T1</string>
+	<string name="temp2_label">T2</string>
+	<string name="temp3_label">T3</string>
+	<string name="ph_label">PH</string>
+	<string name="dp_label">DP</string>
+	<string name="ap_label">AP</string>
+	<string name="salinity_label">Salinity</string>
+	<string name="ato_low_label">ATO Low</string>
+	<string name="ato_high_label">ATO High</string>
 	<string name="main_relay_label">Main Relay</string>
-	<string name="port1_label">Port 1:</string>
-	<string name="port2_label">Port 2:</string>
-	<string name="port3_label">Port 3:</string>
-	<string name="port4_label">Port 4:</string>
-	<string name="port5_label">Port 5:</string>
-	<string name="port6_label">Port 6:</string>
-	<string name="port7_label">Port 7:</string>
-	<string name="port8_label">Port 8:</string>
+	<string name="port1_label">Port 1</string>
+	<string name="port2_label">Port 2</string>
+	<string name="port3_label">Port 3</string>
+	<string name="port4_label">Port 4</string>
+	<string name="port5_label">Port 5</string>
+	<string name="port6_label">Port 6</string>
+	<string name="port7_label">Port 7</string>
+	<string name="port8_label">Port 8</string>
 	<string name="label_separator">:</string>
 	<string name="default_port_name">Port</string>
 	
